# Hagl-more

./: Hagl-more.cabal  README.md  TODO.md  stack.yaml
Hagl/: More.hs
src/Hagl/: More.hs
src/Hagl/More/: DominantStrategy.hs  PureStrategies.hs  Vis.hs
test/: Main.hs
test/Hagl/: More_Test.hs
