name:              Hagl-more
version:           0.0.1
synopsis:          Additional functionality on top of Hagl, a DSL for experimental game theory.
license:           PublicDomain
author:            Paavo Parkkinen
maintainer:        pparkkin@gmail.com
category:          Game Theory
build-type:        Simple
cabal-version:     >=1.8

library
  hs-source-dirs:  src
  exposed-modules: Hagl.More.PureStrategies
                 , Hagl.More.DominantStrategy
                 , Hagl.More.Vis
  build-depends:   base
                 , MissingH
                 , Hagl
                 , graphviz

Test-Suite tests
  type:            exitcode-stdio-1.0
  main-is:         Main.hs
  hs-source-dirs:  test
  other-modules:   Hagl.More_Test
  build-depends:   base
                 , HUnit
                 , test-framework
                 , test-framework-hunit
                 , Hagl
                 , Hagl-more

